Add test to Paprika Lint whole project Use gradle for build and dependencies, except for JFuzzyLogic Edit ARGB8888 Query to avoid displaying node IDs